add Guard scim permission to user and group. replace space to - for generateId function
